--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="styles-3eba09980fa05ead185cb17d9c0deb0f.css" type="text/css" />
 
   <script type="text/javascript" src="extjs/ext-all.js"></script>
-  <script type="text/javascript" src="data-8871c0136306bd2affaed23dc9437201.js"></script>
+  <script type="text/javascript" src="data-5a5122f0c27bd408020a553cd9420b55.js"></script>
 
   <script type="text/javascript" src="app-0c945a27f43452df695771ddb60b3d14.js"></script>
 
@@ -32,6 +32,7 @@
 <div class='left-column'>
 <h3>Others...</h3>
 <ul class='links'>
+<li><a href="#!/api/BaseError" rel="BaseError" class="docClass">BaseError</a></li>
 <li><a href="#!/api/Errors" rel="Errors" class="docClass">Errors</a></li>
 </ul>
 </div>
@@ -45,7 +46,7 @@
 
   
   
-  <div id='footer-content' style='display: none'>Copyright 2015 ADoyle. Licensed under the Apache License, Version 2.0.</div>
+  <div id='footer-content' style='display: none'>Copyright 2015-2016 ADoyle. Licensed under the Apache License, Version 2.0.</div>
 
   
 
