--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="styles-3eba09980fa05ead185cb17d9c0deb0f.css" type="text/css" />
 
   <script type="text/javascript" src="extjs/ext-all.js"></script>
-  <script type="text/javascript" src="data-5a5122f0c27bd408020a553cd9420b55.js"></script>
+  <script type="text/javascript" src="data-a3b89b4aac919816feb3fea488f0f7da.js"></script>
 
   <script type="text/javascript" src="app-0c945a27f43452df695771ddb60b3d14.js"></script>
 
@@ -33,7 +33,8 @@
 <h3>Others...</h3>
 <ul class='links'>
 <li><a href="#!/api/BaseError" rel="BaseError" class="docClass">BaseError</a></li>
-<li><a href="#!/api/Errors" rel="Errors" class="docClass">Errors</a></li>
+<li><a href="#!/api/Ero" rel="Ero" class="docClass">Ero</a></li>
+<li><a href="#!/api/global" rel="global" class="docClass">global</a></li>
 </ul>
 </div>
 <div class='middle-column'>
